外部コマンドのパイプ処理ができるように